--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="referrer" content="never">
     <meta charset="UTF-8"/>
-    <title>(╥﹏╥)</title>
+    <title>素质男孩</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
 </head>
 <body>
