--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,17 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="referrer" content="never">
     <meta charset="UTF-8"/>
-    <title>素质男孩</title>
+    <title>2333小站</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?69fc38ccb7e9d9b1a734944f464a3c02";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 <body>
     <div id="app"></div>
