--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
     <meta name="applicable-device" content="pc,mobile">
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
-    <meta name="referrer" content="never">
+<!--    <meta name="referrer" content="never">-->
+    <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta charset="UTF-8"/>
     <title>2333小站</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
