--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,12 @@
     <meta name="applicable-device" content="pc,mobile">
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
-    <meta name="keywords" content="樱花动漫,免费电影,免费动漫">
-    <meta name="description" content="樱花动漫是一个提供各种视频资源的网站，包括最新更新的动漫，电影，电视剧等。">
+    <meta name="keywords" content="茶杯狐,茶杯狐门户,茶杯狐cupfox,樱花动漫,免费电影,免费动漫">
+    <meta name="description" content="茶杯狐(www.2333tv.top)实时同步聚合全网优质影视资源,提供好看的电影、电视剧、纪录片、动漫综艺节目大全,第一时间更新，流畅的移动端观影体验">
 <!--    <meta name="referrer" content="never">-->
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta charset="UTF-8"/>
-    <title>樱花动漫</title>
+    <title>茶杯狐</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
     <script>
         var _hmt = _hmt || [];
