1.add LA script

--- a/client/index.html
+++ b/client/index.html
@@ -8,25 +8,28 @@
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <meta name="keywords" content="茶杯狐,茶杯狐门户,茶杯狐cupfox,樱花动漫,免费电影,免费动漫">
-    <meta name="description" content="茶杯狐(www.2333tv.top)实时同步聚合全网优质影视资源,提供好看的电影、电视剧、纪录片、动漫综艺节目大全,第一时间更新，流畅的移动端观影体验">
-<!--    <meta name="referrer" content="never">-->
+    <meta name="description"
+          content="茶杯狐(www.2333tv.top)实时同步聚合全网优质影视资源,提供好看的电影、电视剧、纪录片、动漫综艺节目大全,第一时间更新，流畅的移动端观影体验">
+    <!--    <meta name="referrer" content="never">-->
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta charset="UTF-8"/>
-    <meta name="baidu-site-verification" content="codeva-zOYouuVB8Y" />
+    <meta name="baidu-site-verification" content="codeva-zOYouuVB8Y"/>
     <title>茶杯狐</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
     <script>
         var _hmt = _hmt || [];
-        (function() {
+        (function () {
             var hm = document.createElement("script");
             hm.src = "https://hm.baidu.com/hm.js?69fc38ccb7e9d9b1a734944f464a3c02";
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id: "3JZzfLhNCgBvXUW6", ck: "3JZzfLhNCgBvXUW6"})</script>
 </head>
 <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
