--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,8 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
-    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-    <script>LA.init({id: "3JZzfLhNCgBvXUW6", ck: "3JZzfLhNCgBvXUW6"})</script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8405126990681823"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="app"></div>
