--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta charset="UTF-8"/>
     <meta name="baidu-site-verification" content="codeva-zOYouuVB8Y"/>
+    <meta name="google-adsense-account" content="ca-pub-8405126990681823">
     <title>茶杯狐</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
     <script>
