--- a/client/index.html
+++ b/client/index.html
@@ -27,8 +27,9 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8405126990681823"
-            crossorigin="anonymous"></script>
+<!--    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8405126990681823"-->
+<!--            crossorigin="anonymous"></script>-->
+    <script type='text/javascript' src='//pl24426356.cpmrevenuegate.com/d9/35/85/d93585078f4d9013f72e8cfa1ed1f190.js'></script>
 </head>
 <body>
 <div id="app"></div>
