--- a/client/index.html
+++ b/client/index.html
@@ -34,17 +34,15 @@
 <body>
 <div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
-<!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8405126990681823"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--&lt;!&ndash; guanggao1 &ndash;&gt;-->
-<!--<ins class="adsbygoogle"-->
-<!--     style="display:block"-->
-<!--     data-ad-client="ca-pub-8405126990681823"-->
-<!--     data-ad-slot="3853521730"-->
-<!--     data-ad-format="auto"-->
-<!--     data-full-width-responsive="true"></ins>-->
-<!--<script>-->
-<!--    (adsbygoogle = window.adsbygoogle || []).push({});-->
-<!--</script>-->
+<script type="text/javascript">
+    atOptions = {
+        'key' : 'a08e2add83911245a3fa076197a8029b',
+        'format' : 'iframe',
+        'height' : 50,
+        'width' : 320,
+        'params' : {}
+    };
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/a08e2add83911245a3fa076197a8029b/invoke.js"></script>
 </body>
 </html>
