--- a/client/index.html
+++ b/client/index.html
@@ -30,17 +30,20 @@
 <!--    <script type='text/javascript' src='//pl24426356.cpmrevenuegate.com/d9/35/85/d93585078f4d9013f72e8cfa1ed1f190.js'></script>-->
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+  <div id="guanggao">
+  <script type="text/javascript">
+    atOptions = {
+        'key' : 'a08e2add83911245a3fa076197a8029b',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 320,
+        'params' : {}
+    };
+</script>
+    <script type="text/javascript" src="//www.topcreativeformat.com/a08e2add83911245a3fa076197a8029b/invoke.js"></script>
+  </div>
+    </div>
 <script type="module" src="/src/main.ts"></script>
-<!--<script type="text/javascript">-->
-<!--    atOptions = {-->
-<!--        'key' : 'a08e2add83911245a3fa076197a8029b',-->
-<!--        'format' : 'iframe',-->
-<!--        'height' : 50,-->
-<!--        'width' : 320,-->
-<!--        'params' : {}-->
-<!--    };-->
-<!--</script>-->
-<!--<script type="text/javascript" src="//www.topcreativeformat.com/a08e2add83911245a3fa076197a8029b/invoke.js"></script>-->
 </body>
 </html>
