--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
     <meta name="baidu-site-verification" content="codeva-zOYouuVB8Y"/>
     <meta name="google-adsense-account" content="ca-pub-8405126990681823">
     <meta name="baidu_union_verify" content="d69ddd50078c162c55aec3090c1ba945">
+    <meta name="juicyads-site-verification" content="1b4b52ae5853d7663fedab5d24933cde">
     <title>茶杯狐</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
     <script>
@@ -27,23 +28,9 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
-<!--    <script type='text/javascript' src='//pl24426356.cpmrevenuegate.com/d9/35/85/d93585078f4d9013f72e8cfa1ed1f190.js'></script>-->
 </head>
 <body>
-<div id="app">
-  <div id="guanggao">
-  <script type="text/javascript">
-    atOptions = {
-        'key' : 'a08e2add83911245a3fa076197a8029b',
-        'format' : 'iframe',
-        'height' : 600,
-        'width' : 320,
-        'params' : {}
-    };
-</script>
-    <script type="text/javascript" src="//www.topcreativeformat.com/a08e2add83911245a3fa076197a8029b/invoke.js"></script>
-  </div>
-    </div>
+<div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
