--- a/client/index.html
+++ b/client/index.html
@@ -15,8 +15,7 @@
     <meta charset="UTF-8"/>
     <meta name="baidu-site-verification" content="codeva-zOYouuVB8Y"/>
     <meta name="google-adsense-account" content="ca-pub-8405126990681823">
-    <meta name="baidu_union_verify" content="d69ddd50078c162c55aec3090c1ba945">
-    <meta name="juicyads-site-verification" content="1b4b52ae5853d7663fedab5d24933cde">
+    <meta name="6a97888e-site-verification" content="199bcea7e898df4206442d87a347d246">
     <title>茶杯狐</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
     <script>
