--- a/client/index.html
+++ b/client/index.html
@@ -31,5 +31,8 @@
 <body>
 <div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
+<ins class="eas6a97888e6" data-zoneid="5421736"></ins>
+<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 </body>
 </html>
