--- a/client/index.html
+++ b/client/index.html
@@ -34,8 +34,8 @@
 <!--<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>-->
 <!--<ins class="eas6a97888e6" data-zoneid="5421736"></ins>-->
 <!--<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>-->
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
-<ins class="eas6a97888e14" data-zoneid="5421758"></ins>
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+<!--<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>-->
+<!--<ins class="eas6a97888e14" data-zoneid="5421758"></ins>-->
+<!--<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>-->
 </body>
 </html>
