--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,8 @@
     <meta name="baidu-site-verification" content="codeva-zOYouuVB8Y"/>
     <meta name="google-adsense-account" content="ca-pub-8405126990681823">
     <meta name="6a97888e-site-verification" content="199bcea7e898df4206442d87a347d246">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8405126990681823"
+            crossorigin="anonymous"></script>
     <title>茶杯狐</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/c/font_3992367_chvdxwo1gkp.css">
     <script>
@@ -31,11 +33,5 @@
 <body>
 <div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
-<!--<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>-->
-<!--<ins class="eas6a97888e6" data-zoneid="5421736"></ins>-->
-<!--<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>-->
-<!--<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>-->
-<!--<ins class="eas6a97888e14" data-zoneid="5421758"></ins>-->
-<!--<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>-->
 </body>
 </html>
