--- a/client/index.html
+++ b/client/index.html
@@ -33,5 +33,17 @@
 <body>
 <div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8405126990681823"
+        crossorigin="anonymous"></script>
+<!-- guanggao1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8405126990681823"
+     data-ad-slot="3853521730"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
